--- a/.eslintrc
+++ b/.eslintrc
@@ -1,13 +1,15 @@
 {
-  parser: "babel-eslint",
-  extends: "airbnb",
-  rules: {
-    no-unused-vars: 0,
-    max-len: [1, 120, 2, {ignoreComments: true}]
-  },
-  globals: {
-    "document": true,
-    "foo": true,
-    "window": true
-  }
+    "parser": "babel-eslint",
+    extends: "airbnb",
+    rules: {
+        "react/jsx-indent": [1, 4],
+        "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }],
+        "no-unused-vars": 0,
+        "max-len": [1, 120, 2, {ignoreComments: true}]
+    },
+    globals: {
+        "document": true,
+        "foo": true,
+        "window": true
+    }
 }
