--- a/.eslintrc
+++ b/.eslintrc
@@ -2,7 +2,11 @@
     "parser": "babel-eslint",
     extends: "airbnb",
     rules: {
-        "react/jsx-indent": [1, 4],
+        "react/prop-types": [0, { ignore: ['children'] }],
+        "react/prefer-es6-class": [0, 'always'],
+        arrow-body-style: ["error", "always"],
+        indent: ["error", 4, { "VariableDeclarator": 4 }],
+        "react/jsx-indent": [2, 4],
         "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }],
         "no-unused-vars": 0,
         "max-len": [1, 120, 2, {ignoreComments: true}]
