--- a/package.json
+++ b/package.json
@@ -21,9 +21,10 @@
     "webpack": "^2.2.1"
   },
   "devDependencies": {
+    "add": "^2.0.6",
     "babel-core": "^6.23.1",
     "babel-eslint": "^7.1.1",
-    "babel-loader": "^6.3.0",
+    "babel-loader": "^6.3.2",
     "babel-preset-es2015": "^6.22.0",
     "babel-preset-react": "^6.23.0",
     "babel-preset-stage-0": "^6.22.0",
@@ -34,10 +35,12 @@
     "eslint-plugin-import": "^2.2.0",
     "eslint-plugin-jsx-a11y": "^4.0.0",
     "eslint-plugin-react": "^6.10.0",
+    "extract-text-webpack-plugin": "^2.0.0-beta",
     "file-loader": "^0.10.0",
     "node-sass": "^4.5.0",
     "react-hot-loader": "^1.3.1",
     "sass-loader": "^6.0.2",
-    "style-loader": "^0.13.1"
+    "style-loader": "^0.13.1",
+    "yarn": "^0.18.2"
   }
 }
