--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "babel-preset-es2015": "^6.22.0",
     "babel-preset-react": "^6.23.0",
     "babel-preset-stage-0": "^6.22.0",
+    "bootstrap-sass": "^3.3.7",
     "css-loader": "^0.26.1",
     "eslint": "^3.16.0",
     "eslint-config-airbnb": "^14.1.0",
@@ -41,6 +42,7 @@
     "react-hot-loader": "^1.3.1",
     "sass-loader": "^6.0.2",
     "style-loader": "^0.13.1",
+    "url-loader": "^0.5.8",
     "yarn": "^0.18.2"
   }
 }
