--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "description": "Expressjs React Redux BoilerPlate",
   "main": "index.js",
   "scripts": {
-    "webpack": "webpack",
-    "start": "node app.js"
+    "build": "babel server --out-dir build && webpack",
+    "start": "NODE_ENV=production node build/app.js",
+    "development": "NODE_ENV=development node build/app.js",
+    "clean": "rm -rf public build"
   },
   "repository": {},
   "author": "Kendrick B. Jung",
@@ -36,13 +38,14 @@
     "eslint-plugin-import": "^2.2.0",
     "eslint-plugin-jsx-a11y": "^4.0.0",
     "eslint-plugin-react": "^6.10.0",
-    "extract-text-webpack-plugin": "^2.0.0-beta",
+    "extract-text-webpack-plugin": "^2.0.0",
     "file-loader": "^0.10.0",
     "node-sass": "^4.5.0",
-    "react-hot-loader": "^1.3.1",
+    "react-hot-loader": "3.0.0-beta.3",
     "sass-loader": "^6.0.2",
     "style-loader": "^0.13.1",
     "url-loader": "^0.5.8",
+    "webpack-dev-server": "^2.4.1",
     "yarn": "^0.18.2"
   }
 }
