--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "babel server --out-dir build && webpack",
     "start": "NODE_ENV=production node build/app.js",
     "development": "NODE_ENV=development node build/app.js",
-    "clean": "rm -rf public build"
+    "clean": "rm -rf build/ pubilc/css/ public/fonts/ public/bundle.js"
   },
   "repository": {},
   "author": "Kendrick B. Jung",
@@ -20,17 +20,18 @@
     "react-redux": "^5.0.2",
     "react-router": "^3.0.2",
     "redux": "^3.6.0",
-    "webpack": "^2.2.1"
+    "redux-thunk": "^2.2.0"
   },
   "devDependencies": {
-    "add": "^2.0.6",
     "babel-core": "^6.23.1",
     "babel-eslint": "^7.1.1",
     "babel-loader": "^6.3.2",
+    "babel-polyfill": "^6.23.0",
     "babel-preset-es2015": "^6.22.0",
     "babel-preset-react": "^6.23.0",
     "babel-preset-stage-0": "^6.22.0",
     "bootstrap-sass": "^3.3.7",
+    "connect-history-api-fallback": "^1.3.0",
     "css-loader": "^0.26.1",
     "eslint": "^3.16.0",
     "eslint-config-airbnb": "^14.1.0",
@@ -41,11 +42,14 @@
     "extract-text-webpack-plugin": "^2.0.0",
     "file-loader": "^0.10.0",
     "node-sass": "^4.5.0",
-    "react-hot-loader": "3.0.0-beta.3",
+    "react-hot-loader": "3.0.0-beta.6",
+    "redux-devtools": "^3.3.2",
+    "redux-devtools-dock-monitor": "^1.1.1",
+    "redux-devtools-log-monitor": "^1.2.0",
     "sass-loader": "^6.0.2",
     "style-loader": "^0.13.1",
     "url-loader": "^0.5.8",
-    "webpack-dev-server": "^2.4.1",
-    "yarn": "^0.18.2"
+    "webpack": "^2.2.1",
+    "webpack-dev-server": "^2.4.1"
   }
 }
