--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "build": "babel server --out-dir build && webpack",
-    "start": "NODE_ENV=production node build/app.js",
-    "development": "NODE_ENV=development node build/app.js",
+    "start": "cross-env NODE_ENV=production node build/app.js",
+    "development": "cross-env NODE_ENV=development node build/app.js",
     "clean": "rm -rf build/ pubilc/css/ public/fonts/ public/bundle.js"
   },
   "repository": {},
@@ -32,6 +32,7 @@
     "babel-preset-stage-0": "^6.22.0",
     "bootstrap-sass": "^3.3.7",
     "connect-history-api-fallback": "^1.3.0",
+    "cross-env": "^3.1.4",
     "css-loader": "^0.26.1",
     "eslint": "^3.16.0",
     "eslint-config-airbnb": "^14.1.0",
